# type-ops

./: README.md  shell.nix  type-ops.cabal
Data/Type/Nat/: Math.hs
